[package]
name = "dvrpc-node"
version = "0.1.0"
edition = "2021"
authors = ["DVRPC Contributors"]
description = "Decentralized Verified RPC node for Ethereum with cryptographic proofs"
license = "MIT"
repository = "https://github.com/YOUR-ORG/dvrpc-node"
keywords = ["ethereum", "rpc", "light-client", "merkle-proofs", "verification"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP/RPC server
axum = "0.7"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Ethereum types
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-rlp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
eyre = "0.6"

# Crypto
sha3 = "0.10"

# Utilities
hex = "0.4"
bytes = "1.7"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
strip = true
